[FIX] Doc - problem with UL,OL that are not well aligned

--- a/doc/readme.css
+++ b/doc/readme.css
@@ -57,7 +57,7 @@ a:visited {
     color: purple;
 }
 ul, ol {
-    padding: 0;
+    padding: 0 0 0 25px;
     margin: 0 0 0 24;
 }
 li {
